[package]
name = "rsummary"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = { version = "0.6.12", features = ["macros"] }
axum = "0.6.12"
color-eyre = "0.6.2"
derive_more = "0.99.17"
eyre = "0.6.8"
hashbrown = "0.13.2"
serde = { version = "1.0.158", features = ["derive"] }
tokio = { version = "1.26.0", features = ["rt", "macros"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
xshell = "0.2.3"
dirs = "4.0.0"
knuffel = "2.0.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.3"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
